--- a/calculator.html
+++ b/calculator.html
@@ -8,58 +8,40 @@
 <body>
 
   <!-- Calculator wrapper  -->
-  <div id ="calculator">
-    <!-- form for calcualtor -->
-    <form name ="calc ">
+  <div class="wrap">
+    <form name="cal">
 
-      <div class="screen">
-        <input type="text" name ="display" />
+      <input type="text" name="display" >
+      <br>
+      <br>
+      <input type="button" value="9" onclick="cal.display.value+='9'">
+      <input type="button" value="8" onclick="cal.display.value+='8'">
+      <input type="button" value="7" onclick="cal.display.value+='7'">
+      <input type="button" value="+" onclick="cal.display.value+='+'">
+      <br>
+      <br>
 
-      </div>
+      <input type="button" value="6" onclick="cal.display.value+='6'">
+      <input type="button" value="5" onclick="cal.display.value+='5'">
+      <input type="button" value="4" onclick="cal.display.value+='4'">
+      <input type="button" value="-" onclick="cal.display.value+='-'">
+      <br>
+      <br>
 
+      <input type="button" value="3" onclick="cal.display.value+='3'">
+      <input type="button" value="2" onclick="cal.display.value+='2'">
+      <input type="button" value="1" onclick="cal.display.value+='1'">
+      <input type="button" value="*" onclick="cal.display.value+='*'">
+      <br>
+      <br>
 
-
-
-    <!-- Calculator Keys -->
-    <div class="keys">
-
-      <input type="button" value="9" onclick ="calc.display.value+='9'">
-      <input type="button" value="8" onclick ="calc.display.value+='8'">
-      <input type="button" value="7"onclick ="calc.display.value+='7'">
-      <input type="button" value="+" onclick ="calc.display.value+='+'">
-
-
-
-
-      <input type="button" value="6" onclick ="calc.display.value+='6'">
-      <input type="button" value="5" onclick ="calc.display.value+='5'">
-      <input type="button" value="4" onclick ="calc.display.value+='4'">
-      <input type="button" value="-" onclick ="calc.display.value+='-'">
-
-
-
-
-      <input type="button" value="3" onclick ="calc.display.value+='3'">
-      <input type="button" value="2" onclick ="calc.display.value+='2'">
-      <input type="button" value="1" onclick ="calc.display.value+='1'">
-      <input type="button" value="*" onclick ="calc.display.value+='*'">
-
-
-
-
-      <input type="button" value="0" onclick= "calc.display.value+='0'">
-      <input type="button" value="/" onclick ="calc.display.value+='/'">
-      <input type="button" value="%" onclick ="calc.display.value+='%'">
-      <input type="button" value="=" onclick ="calc.display.value = eval(calc.display.value)">
-
-
-
-
-      <input type="button" value="DELETE" onclick="calc.screen.value ''" id="del">
-
-
-    </div>
-
+      <input type="button" value="0" onclick="cal.display.value+='0'">
+      <input type="button" value="/" onclick="cal.display.value+='/'">
+      <input type="button" value="%" onclick="cal.display.value+='%'">
+      <input type="button" value="=" onclick="cal.display.value = eval(cal.display.value)">
+      <br>
+      <br>
+      <input type="button" value="DELETE" onclick="cal.display.value=''" id ="del">
 
 
 
@@ -68,8 +50,6 @@
 
 
     </form>
-
   </div>
-
 </body>
 </html>
