--- a/calculator.html
+++ b/calculator.html
@@ -51,7 +51,7 @@
 
     </form>
   </div>
-  <script src="js/jquery-3.3.1.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/scripts.js" ></script>
 </body>
 </html>
